--- a/src/angular/cooldrive/src/app/app.component.html
+++ b/src/angular/cooldrive/src/app/app.component.html
@@ -1,6 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="login">
-  asdasdasd
-</div>
+<router-outlet></router-outlet>
 
 
