--- a/src/angular/cooldrive/src/app/components/login/login.component.html
+++ b/src/angular/cooldrive/src/app/components/login/login.component.html
@@ -1,3 +1,27 @@
-<div>
-    kakapisi
+<div class="container">
+    <div class="row">
+        <div class="col-md-2">
+            
+        </div>
+
+        <div class="col-md-8 contentpane">
+            <div class="login-panel-left">
+                <h3>logingenyó</h3>
+                email:<input type="text"><br>
+                pass:<input type="text"> 
+            </div>
+
+            <div class="login-panel-right">
+                <h3>Sign up</h3>
+                <button class="registerbutton">Register</button>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            
+        </div>
+    </div>
+</div>
+
+<div class="card">
 </div>
