--- a/src/angular/cooldrive/src/app/components/register/register.component.html
+++ b/src/angular/cooldrive/src/app/components/register/register.component.html
@@ -1,31 +1,33 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card mx-4">
-        <div class="card-block p-4">
-          <h1>Register</h1>
-          <p class="text-muted">Create your account</p>
-          <div class="input-group mb-3">
-            <span class="input-group-addon"><i class="icon-user"></i></span>
-            <input type="text" class="form-control" placeholder="Username">
-          </div>
+<div class="jumbotron vertical-center">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card mx-4">
+          <div class="card-block p-4">
+            <h1>Register</h1>
+            <p class="text-muted">Create your account</p>
+            <div class="input-group mb-3">
+              <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+              <input type="text" class="form-control" placeholder="Username">
+            </div>
 
-          <div class="input-group mb-3">
-            <span class="input-group-addon">@</span>
-            <input type="text" class="form-control" placeholder="Email">
-          </div>
+            <div class="input-group mb-3">
+              <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
+              <input type="text" class="form-control" placeholder="Email">
+            </div>
 
-          <div class="input-group mb-3">
-            <span class="input-group-addon"><i class="icon-lock"></i></span>
-            <input type="password" class="form-control" placeholder="Password">
-          </div>
+            <div class="input-group mb-3">
+              <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+              <input type="password" class="form-control" placeholder="Password">
+            </div>
 
-          <div class="input-group mb-4">
-            <span class="input-group-addon"><i class="icon-lock"></i></span>
-            <input type="password" class="form-control" placeholder="Repeat password">
-          </div>
+            <div class="input-group mb-4">
+              <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+              <input type="password" class="form-control" placeholder="Repeat password">
+            </div>
 
-          <button type="button" class="btn btn-block btn-success">Create Account</button>
+            <button type="button" class="btn btn-block btn-success">Create Account</button>
+          </div>
         </div>
       </div>
     </div>
