--- a/src/angular/cooldrive/src/app/components/login/login.component.css
+++ b/src/angular/cooldrive/src/app/components/login/login.component.css
@@ -20,12 +20,13 @@ html, body {
     height: 380px;
     background-color: #20a8d8;
     border-left: solid black 1px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .contentpane{
     text-align: center;
     display: flex;
-    border: solid black 1px;
     box-shadow: 7px 7px 16px 0px rgba(0,0,0,0.75);
     padding: 0;
 }
