Implemented basic Login and server communication capability

--- a/src/angular/cooldrive/src/app/components/login/login.component.html
+++ b/src/angular/cooldrive/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
                             <div class="input-group mb-4">
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span>
                                 </span>
-                                <input type="password" class="form-control" placeholder="Password" [(ngModel)]="password">
+                                <input ngmodel="passIn" type="password" class="form-control" placeholder="Password" [(ngModel)]="password">
                             </div>
                             <div class="row">
                                 <div class="col-6">
