--- a/src/angular/cooldrive/src/app/components/login/login.component.html
+++ b/src/angular/cooldrive/src/app/components/login/login.component.html
@@ -32,7 +32,7 @@
                             <div>
                                 <h2>Sign up</h2>
                                 <p>placeholder placeholderplaceholderplaceholde rplaceholderplacehold erplaceholderplaceholder.</p>
-                                <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
+                                <button type="button" (click)="register()" class="btn btn-primary active mt-3">Register Now!</button>
                             </div>
                         </div>
                     </div>
