--- a/src/angular/cooldrive/src/app/components/register/register.component.css
+++ b/src/angular/cooldrive/src/app/components/register/register.component.css
@@ -1,7 +1,17 @@
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 .jumbotron{
-  background-color: #e4e5e6;
+  background-color: rgba(0,0,0,0.0);
 }
 
 .card{
   border-radius: 1rem;
+}
+
+.btn-success{
+  background-color: #20a8d8;
+
 }
