--- a/src/angular/cooldrive/src/app/components/login/login.component.html
+++ b/src/angular/cooldrive/src/app/components/login/login.component.html
@@ -31,7 +31,7 @@
                         <div class="card-block text-center">
                             <div>
                                 <h2>Sign up</h2>
-                                <p>placeholder placeholderplaceholderplaceholde rplaceholderplacehold erplaceholderplaceholder.</p>
+                                <p>Click here to register a new account.</p>
                                 <button type="button" (click)="register()" class="btn btn-primary active mt-3">Register Now!</button>
                             </div>
                         </div>
