--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -10,6 +10,50 @@
 </head>
 
 <body>
+<!-- TOP NAVBAR -->
+<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top">
+  <!-- Brandname and collapse button when navbar is closed -->
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">CoolDrive</a>
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavbar">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div>
+
+  <!-- Navbar's body, this is the one which collapse on small screen -->
+  <div class="collapse navbar-collapse" id="topNavbar">
+    <!-- navbar left align -->
+    <ul class="nav navbar-nav navbar-left">
+      <div>
+        <!-- Search field and button -->
+        <form class="form-inline mt-2 mt-md-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </ul>
+
+    <!-- navbar right align -->
+    <ul class="nav navbar-nav navbar-right">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <!-- UserProfile logo and username-->
+          <img src="http://fundacionrosario.org.ar/wp-content/uploads/2017/03/personal-05.png" class="img-avatar">UserName Here
+        </a>
+        <!-- USER DROPDOWN MENU ITEMS -->
+        <div id="navbar-dropdown" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<!-- FLOATING BUTTON -->
 <div id="floatingButton" class="btn-group dropup">
   <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     New
@@ -23,40 +67,7 @@
   </div>
 </div>
 
-<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top">
-  <div class="navbar-header">
-    <a class="navbar-brand" href="#">CoolDrive</a>
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavbar">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-  </div>
-
-  <div class="collapse navbar-collapse" id="topNavbar">
-    <ul class="nav navbar-nav navbar-left">
-      <div>
-        <form class="form-inline mt-2 mt-md-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="http://fundacionrosario.org.ar/wp-content/uploads/2017/03/personal-05.png" class="img-avatar">UserName Here
-        </a>
-        <div id="navbar-dropdown" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
-
+<!-- Left navigation menu -->
 <div class="container-fluid">
   <div class="row">
     <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
@@ -103,6 +114,7 @@
       </ul>
     </nav>
 
+    <!-- PAGE BODY THIS IS WHERE YOU LOAD YOUR STUFF -->
     <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3" id="mainContent">
       <div class="page-body">
         <h1>Section title</h1>
