Added username display from tokey key pair

--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -40,7 +40,7 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <!-- UserProfile logo and username-->
-          <img src="http://fundacionrosario.org.ar/wp-content/uploads/2017/03/personal-05.png" class="img-avatar">UserName Here
+          <img src="http://fundacionrosario.org.ar/wp-content/uploads/2017/03/personal-05.png" class="img-avatar">{{userName}}
         </a>
         <!-- USER DROPDOWN MENU ITEMS -->
         <div id="navbar-dropdown" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
