--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -1,3 +1,43 @@
-<p>
-  files works!
-</p>
+<h1>Your files
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25/100MB</div>
+  </div>
+</h1>
+
+<div class="table-responsive">
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <th>Filename</th>
+      <th>Extension</th>
+      <th>Size</th>
+      <th>Last Modify</th>
+      <th>Label</th>
+      <th>Functions</th>
+    </tr>
+    </thead>
+
+
+
+    <tbody id="FileListDisplay">
+
+    <tr *ngFor="let file of files.files">
+      <td>
+        <div *ngIf="file.ifFolder == false"> <span class="glyphicon glyphicon-file"></span> {{file.filename}}</div>
+        <div *ngIf="file.ifFolder == true"> <span class="glyphicon glyphicon-folder-close"></span> {{file.filename}}</div>
+      </td>
+      <td>{{file.extension}}</td>
+      <td>{{file.size}} MB</td>
+      <td>{{file.lastmodify}}</td>
+      <td>{{file.label}}</td>
+      <td>
+        <button type="button" class="btn btn-default btn-sm" >
+          <span class="glyphicon glyphicon-menu-hamburger"></span> More
+        </button>
+      </td>
+    </tr>
+
+    </tbody>
+
+  </table>
+</div>
