added method call on logout option

--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
         </a>
         <!-- USER DROPDOWN MENU ITEMS -->
         <div id="navbar-dropdown" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" (click)="logout()">Log Out</a>
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
