--- a/src/angular/cooldrive/src/app/components/login/login.component.html
+++ b/src/angular/cooldrive/src/app/components/login/login.component.html
@@ -33,7 +33,7 @@
                                 <h2>Sign up</h2>
                                 <p>Click here to register a new account.</p>
                                 <button type="button" (click)="register()" class="btn btn-primary active mt-3">Register Now!</button>
-                                <button type="button" (click)="gecisfasz()" class="btn btn-primary active mt-3">teszgeci!</button>
+                                <button type="button" class="btn btn-primary active mt-3">teszgeci!</button>
                             </div>
                         </div>
                     </div>
