--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -1,3 +1,17 @@
+<!-- FLOATING BUTTON -->
+<div id="floatingButton" class="btn-group dropup">
+  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    New
+  </button>
+  <div id="floatingButtonDropdown" class="dropdown-menu">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="#">Separated link</a>
+  </div>
+</div>
+
 <h1>Your files
   <div class="progress">
     <div id="progress-bar" class="progress-bar" role="progressbar" [style.width]="percentageStyle">{{usage}}/{{quantity}} MB</div>
