--- a/src/angular/cooldrive/src/app/components/files/files.component.css
+++ b/src/angular/cooldrive/src/app/components/files/files.component.css
@@ -9,9 +9,11 @@
   z-index: 99; /* Make sure it does not overlap */
   cursor: pointer; /* Add a mouse pointer on hover */
 }
-
-
 #floatingButtonDropdown{
   left: auto;
   right: 0px;
+}
+
+.modal-content{
+  margin-top: 190px;
 }
