removed search button
search is now works automaticly without pushing the button

--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -29,8 +29,7 @@
       <div>
         <!-- Search field and button -->
         <form class="form-inline mt-2 mt-md-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <input class="form-control mr-sm-2" width="30%" type="text" placeholder="Search" (keyup)="sendSearchData()" [ngModelOptions]="{standalone: true}" [(ngModel)] = "filter">
         </form>
       </div>
     </ul>
