disk usage bar color now change based on usage

--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -15,7 +15,7 @@
 
 <h1>{{currentFolderName}}
   <div class="progress">
-    <div id="progress-bar" ngClass="progress-bar" role="progressbar" [style.width]="percentageStyle">
+    <div id="progress-bar" ngClass="{{progressBarSytle}}" role="progressbar" [style.width]="percentage+'%'">
       {{usage}}/{{quantity}} MB
     </div>
   </div>
