Added logout function, navpoint to storage extension

--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
         </a>
         <!-- USER DROPDOWN MENU ITEMS -->
         <div id="navbar-dropdown" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" (click)="logout()">Log Out</a>
+          <a class="dropdown-item" href="" (click)="logout()">Log Out</a>
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
@@ -96,7 +96,7 @@
           <a class="nav-link" href="#">One more nav</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Another nav item</a>
+          <a class="nav-link" href="/dashboard/storage" >Storage</a>
         </li>
       </ul>
     </nav>
