Removed unneccesary id-s, added phone input field

--- a/src/angular/cooldrive/src/app/components/storage_extension/extension.component.html
+++ b/src/angular/cooldrive/src/app/components/storage_extension/extension.component.html
@@ -125,24 +125,28 @@
                 </div>
 
                 <div class="input-group">
-                    <span class="input-group-addon fixed-size" id="basic-addon1">First name: </span>
-                    <input type="text" class="form-control" id="fNameField" placeholder="First name" aria-describedby="basic-addon1" [(ngModel)]="firstName">
+                    <span class="input-group-addon fixed-size">First name: </span>
+                    <input type="text" class="form-control" id="fNameField" placeholder="First name" [(ngModel)]="firstName">
                 </div>
                 <div class="input-group">
-                    <span class="input-group-addon fixed-size" id="basic-addon1">Last name: </span>
-                    <input type="text" class="form-control" id="lNameField" placeholder="Last name" aria-describedby="basic-addon1" [(ngModel)]="lastName">
+                    <span class="input-group-addon fixed-size">Last name: </span>
+                    <input type="text" class="form-control" id="lNameField" placeholder="Last name" [(ngModel)]="lastName">
                 </div> 
                 <div class="input-group">
-                    <span class="input-group-addon fixed-size" id="basic-addon1">ZIP code: </span>
-                    <input type="text" class="form-control" id="zipField" placeholder="ZipCode" aria-describedby="basic-addon1" [(ngModel)]="zipCode">
+                    <span class="input-group-addon fixed-size">ZIP code: </span>
+                    <input type="text" class="form-control" id="zipField" placeholder="ZipCode" [(ngModel)]="zipCode">
                 </div>
                 <div class="input-group">
-                    <span class="input-group-addon fixed-size" id="basic-addon1">City: </span>
-                    <input type="text" class="form-control" id="cityNameField" placeholder="City name" aria-describedby="basic-addon1" [(ngModel)]="city">
+                    <span class="input-group-addon fixed-size">City: </span>
+                    <input type="text" class="form-control" id="cityNameField" placeholder="City name" [(ngModel)]="city">
                 </div>
                 <div class="input-group">
-                    <span class="input-group-addon fixed-size" id="basic-addon1">Address: </span>
-                    <input type="text" class="form-control" id="addressField" placeholder="Street name, house number" aria-describedby="basic-addon1" [(ngModel)]="address">
+                    <span class="input-group-addon fixed-size">Phone: </span>
+                    <input type="text" class="form-control" id="phoneField" placeholder="Phone number" [(ngModel)]="phone">
+                </div> 
+                <div class="input-group">
+                    <span class="input-group-addon fixed-size">Address: </span>
+                    <input type="text" class="form-control" id="addressField" placeholder="Street name, house number" [(ngModel)]="address">
                 </div> 
             </div>
         </div>
