file modify skeleton modal added

--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -1,18 +1,3 @@
-<!-- FLOATING BUTTON -->
-<div id="floatingButton" class="btn-group dropup">
-  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-    New
-  </button>
-  <div id="floatingButtonDropdown" class="dropdown-menu">
-    <a class="dropdown-item" href="" data-toggle="modal" data-target="#uploadModal">Upload</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-    <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="#">Separated link</a>
-  </div>
-</div>
-
 <h1>{{currentFolderName}}
   <div class="progress">
     <div id="progress-bar" ngClass="{{progressBarSytle}}" role="progressbar" [style.width]="percentage+'%'">
@@ -20,30 +5,6 @@
     </div>
   </div>
 </h1>
-
-<!-- UPLOAD MODAL -->
-<div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title" id="exampleModalLabel">Upload</h4>
-      </div>
-      <form action="/action_page.php">
-      <div class="modal-body">
-        <input id="uploadedFiles" type="file" formenctype="multipart/form-data" multiple (change)="listUploadedFiles()"><br>
-        <div *ngFor="let file of uploadedFilesList">
-          {{file.name}} : {{file.size/1024000 | number:0 }} MB
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <input type="button" class="btn btn-primary" value="Upload">
-      </div>
-      </form>
-    </div>
-  </div>
-</div>
-
 
 <div class="table-responsive">
   <table class="table table-striped">
@@ -78,8 +39,8 @@
             More
           </button>
           <div id="floatingButtonDropdown" class="dropdown-menu">
-            <a class="dropdown-item" href="#">Delete</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" (click)="deleteFile(file.id)">Delete</a>
+            <a class="dropdown-item" (click)="setSelectedFile(file.fileName, file.label, file.folder)" data-toggle="modal" data-target="#fileModifyModal">Modify</a>
             <a class="dropdown-item" href="#">Something else here</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Separated link</a>
@@ -91,4 +52,64 @@
     </tbody>
 
   </table>
+
+
+  <!-- FLOATING BUTTON -->
+  <div id="floatingButton" class="btn-group dropup">
+    <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+      New
+    </button>
+    <div id="floatingButtonDropdown" class="dropdown-menu">
+      <a class="dropdown-item" href="" data-toggle="modal" data-target="#uploadModal">Upload</a>
+      <a class="dropdown-item" href="#">Another action</a>
+      <a class="dropdown-item" href="#">Something else here</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#">Separated link</a>
+    </div>
+  </div>
+
+
+  <!-- FileModify -->
+  <div class="modal fade" id="fileModifyModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modify file details</h5>
+        </div>
+        <div class="modal-body">
+          FileName: <input value="{{selectedFileName}}">
+          Label: <input value="{{selectedFileLabel}}">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- UPLOAD MODAL -->
+  <div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="uploadModalButton">Upload</h4>
+        </div>
+        <form action="/action_page.php">
+          <div class="modal-body">
+            <input id="uploadedFiles" type="file" formenctype="multipart/form-data" multiple (change)="listUploadedFiles()"><br>
+            <div *ngFor="let file of uploadedFilesList">
+              {{file.name}} : {{file.size/1024000 | number:0 }} MB
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <input type="button" class="btn btn-primary" value="Upload">
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
 </div>
