--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -82,6 +82,9 @@
           <h5 class="modal-title" id="exampleModalLabel">Modify file details</h5>
         </div>
         <div class="modal-body">
+          <div *ngIf="true" id="modifyInfo" ngStyle="" class="alert alert-success" role="alert">
+            <strong>Well done!</strong> You successfully read this important alert message.
+          </div>
           <div class="input-group">
             <span class="input-group-addon modifyModal" id="modifyName">FileName</span>
             <input type="text" class="form-control" aria-describedby="basic-addon1" value="{{selectedFile.fileName}}">
@@ -110,7 +113,7 @@
         <div class="modal-header">
           <h4 class="modal-title" id="uploadModalButton">Upload</h4>
         </div>
-        <form action="/action_page.php">
+        <form action="http://localhost:8080/CoolDrive/files/upload">
           <div class="modal-body">
             <input id="uploadedFiles" type="file" formenctype="multipart/form-data" multiple (change)="listUploadedFiles()"><br>
             <div *ngFor="let file of uploadedFilesList">
@@ -119,7 +122,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <input type="button" class="btn btn-primary" value="Upload">
+            <input type="button" class="btn btn-primary" (click)="uploadFile()" value="Upload">
           </div>
         </form>
       </div>
