--- a/src/angular/cooldrive/src/app/components/login/login.component.html
+++ b/src/angular/cooldrive/src/app/components/login/login.component.html
@@ -2,6 +2,15 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-9">
+                <div class="alert alert-warning info" role="alert" *ngIf="showInputWarning">
+                    <h3 style="margin: auto">Some required fields are left empty!</h3>
+                </div>
+                <div class="alert alert-warning info" role="alert" *ngIf="showIncorrectCredentials">
+                    <h3 style="margin: auto">{{statusMessage}}</h3>
+                </div>
+                <div class="alert alert-success info" role="alert" *ngIf="showSuccesfulLogin">
+                    <h3 style="margin: auto">Succesful Login!</h3>
+                </div>
                 <div class="card-group mb-0">
                     <div class="card p-4">
                         <div class="card-block">
