--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -48,8 +48,6 @@
         <!-- USER DROPDOWN MENU ITEMS -->
         <div id="navbar-dropdown" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="" (click)="logout()">Log Out</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
     </ul>
@@ -63,43 +61,13 @@
     <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Overview <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="/dashboard/files">Files <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Reports</a>
+          <a class="nav-link" href="/dashboard/storage">Buy more storage</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Analytics</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Export</a>
-        </li>
-      </ul>
-
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Nav item</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Nav item again</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">One more nav</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Another nav item</a>
-        </li>
-      </ul>
-
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Nav item again</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">One more nav</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/dashboard/storage" >Storage</a>
+          <a class="nav-link" href="/dashboard/checkout/9">Checkout</a>
         </li>
       </ul>
     </nav>
