--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -43,11 +43,8 @@
             More
           </button>
           <div id="floatingButtonDropdown" class="dropdown-menu">
-            <a class="dropdown-item" (click)="deleteFile(file.id)">Delete</a>
             <a class="dropdown-item" (click)="setSelectedFile(file)" data-toggle="modal" data-target="#fileModifyModal">Modify</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+            <a class="dropdown-item" (click)="deleteFile(file.id)" style="color: red">Delete</a>
           </div>
         </div>
       </td>
@@ -66,10 +63,6 @@
     </button>
     <div id="floatingButtonDropdown" class="dropdown-menu">
       <a class="dropdown-item" href="" data-toggle="modal" data-target="#uploadModal">Upload</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Separated link</a>
     </div>
   </div>
 
