create folder button added

--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -64,6 +64,7 @@
     </button>
     <div id="floatingButtonDropdown" class="dropdown-menu">
       <a class="dropdown-item" href="" data-toggle="modal" data-target="#uploadModal">Upload</a>
+      <a *ngIf="currentFolderId === -1" class="dropdown-item" href="" data-toggle="modal" data-target="#createFolderModal">Create Folder</a>
     </div>
   </div>
 
@@ -119,6 +120,24 @@
             <input type="button" class="btn btn-primary" (click)="uploadFile()" value="Upload">
           </div>
         </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- CREATE FOLDER MODAL -->
+  <div class="modal fade" id="createFolderModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="uploadModalButton">Create folder</h4>
+        </div>
+          <div class="modal-body">
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <input type="button" class="btn btn-primary" (click)="uploadFile()" value="Upload">
+          </div>
       </div>
     </div>
   </div>
